# ChannelTree

./: .gitignore  Dockerfile  LICENSE  README.2025.md  README.md  bot.py  bot_disabled.py  db.py  docker-compose.yml  gen_static.py  gentree.py  pyproject.toml  requirements.txt  utils.py
data-backup/: channel.csv  postgres.dump
data-backup/data.2025/channels/: Adeline_BeiYan.html  Alice_8585_channel.html  AprCorner.html  AquaMai.html  BGG_Comic.html  BGG_Home.html  Billchenla.html  Cicada_no_nichijo.html  ClanstyMusic.html  ClanstySRS.html  Cooked_Ellenya.html  DataEraserCHouse.html  ELC0721.html  Erciyuanha.html  (+83 more)
data/channels/: AI_Baker.html  Akaminosnotebook.html  AkinaDailyChannel.html  Alice_In_Heaven.html  Amazing_Catttty.html  BDovo_Channel.html  BGG_Box.html  BGG_ObservationRoom.html  BGG_VideoNovels.html  BakaLiye_Channel.html  BarclaysRambling.html  BlueArchiveMusicChannel.html  CDgroupEntrance.html  CGwXRB5vhv2.html  Catherine_interesting.html  Clansty.html  CrysTa11.html  Firefly_Liuying.html  Garbage_Station.html  Gholts0c.html  GlobalStreetMarkets.html  HanserFans.html  KanalHafnia.html  Laoself.html  LietsDaily.html  MaiChartManager.html  MiaojiangOfficial.html  MisonoKarin0.html  OGFLAB.html  OSRELTGFuXuan.html  PROs_Gossip.html  PaffWarehouse.html  ST18000NM000J.html  ShuChann.html  TaiwanCDTS.html  XLDFDZ.html  Zhuym.html  abcthoughts.html  acherkrau.html  ak1ra_acg.html  (+77 more)
docs/: md-to-html.js
public/: bubble.html  layout-full-tree.html  layout.html  readme.html  style.css
src/: analysis.py  bot.py  db.py  gen_static.py  gentree.py  utils.py
(+299 files in other folders)
