[project]
name = "channeltree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "hypy-utils>=1.0.29",
    "peewee>=4.0.1",
    "playhouse>=0.1.0",
    "psycopg2>=2.9.11",
    "python-telegram-bot>=22.6",
    "requests>=2.32.5",
    "starlette>=0.52.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]
